--- a/assignment.Rmd
+++ b/assignment.Rmd
@@ -13,4 +13,6 @@ knitr::opts_chunk$set(echo = TRUE)
 
 The Good Place is an American fantasy comedy television series created by *Michael Schur*. It premiered on NBC on September 19, 2016, and concluded on January 30, 2020, after four seasons and 53 episodes.
 
+photo
 
+<img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQePbj2dzP_1S9eIG68hqcJGs1TfPvoAMRz0Yk62bsSLPC9wd2-" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb" alt="undefined" data-noaft="1" style="width: 383px; height: 574.663px; margin: 0px;">
