--- a/assignment.Rmd
+++ b/assignment.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "assignment2"
+title: "Assignment 2"
 output: html_document
 ---
 
@@ -17,27 +17,30 @@ knitr::opts_chunk$set(echo = TRUE)
 
 <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcQePbj2dzP_1S9eIG68hqcJGs1TfPvoAMRz0Yk62bsSLPC9wd2-" jsaction="load:XAeZkd;" jsname="HiaYvf" class="n3VNCb" alt="undefined" data-noaft="1" style="width: 383px; height: 574.663px; margin: 0px;">
 
-3) I have scraped table from wikipedia page about ratings
 
-```{r}
+
+
+3) I have scraped table from wikipedia page about ratings , there is some statistical descriptions
+
+```{r echo=FALSE}
 library(readr)
 table_4 <- read_csv("table-4.csv")
 ```
 
-```{r}
+```{r echo=FALSE}
 summary(table_4)
 ```
-```{r}
+```{r echo=FALSE}
 str(table_4)
 ```
-4)
+4) some graph 
 
-```{r}
+```{r echo=FALSE}
 table_1 <- read_csv("table-1.csv")
 names(table_1) <- make.names(names(table_1))
 ```
 
-```{r}
+```{r echo=FALSE}
 library(ggplot2)
 ggplot(table_1, aes(Season, AVG.vievers)) + geom_point() + geom_jitter()
 ```
